--- a/charts/vault-runtime/templates/20-secrets-app.yaml
+++ b/charts/vault-runtime/templates/20-secrets-app.yaml
@@ -88,3 +88,47 @@ spec:
   vaultAuthRef: k8s
 {{- end }}
 {{- end }}
+
+{{- if .Values.enabled }}
+{{- $hf := .Values.secrets.huggingFaceToken -}}
+{{- if $hf.enabled }}
+---
+apiVersion: secrets.hashicorp.com/v1beta1
+kind: VaultStaticSecret
+metadata:
+  name: {{ $hf.destinationName }}
+  namespace: {{ .Values.namespaces.app }}
+spec:
+  mount: gitops
+  type: kv-v2
+  path: {{ $hf.path }}
+  destination:
+    create: true
+    overwrite: true
+    name: {{ $hf.destinationName }}
+    type: {{ $hf.type | default "Opaque" }}
+  vaultAuthRef: k8s
+{{- end }}
+{{- end }}
+
+{{- if .Values.enabled }}
+{{- $ai := .Values.secrets.openshiftAIToken -}}
+{{- if $ai.enabled }}
+---
+apiVersion: secrets.hashicorp.com/v1beta1
+kind: VaultStaticSecret
+metadata:
+  name: {{ $ai.destinationName }}
+  namespace: {{ .Values.namespaces.app }}
+spec:
+  mount: gitops
+  type: kv-v2
+  path: {{ $ai.path }}
+  destination:
+    create: true
+    overwrite: true
+    name: {{ $ai.destinationName }}
+    type: {{ $ai.type | default "Opaque" }}
+  vaultAuthRef: k8s
+{{- end }}
+{{- end }}
