--- a/charts/signet-embeddings/values-prod.yaml
+++ b/charts/signet-embeddings/values-prod.yaml
@@ -2,3 +2,8 @@ model:
   storageUri: hf://intfloat/e5-mistral-7b-instruct
 predictor:
   runtimeClassName: nvidia
+  deploymentStrategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 0
+      maxUnavailable: 1
