fix(charts): switch inference to nvidia-cdi

--- a/charts/signet-llm/values-prod.yaml
+++ b/charts/signet-llm/values-prod.yaml
@@ -1,7 +1,7 @@
 model:
   storageUri: hf://Qwen/Qwen2.5-14B-Instruct
 predictor:
-  runtimeClassName: nvidia
+  runtimeClassName: nvidia-cdi
   deploymentStrategy:
     type: RollingUpdate
     rollingUpdate:
