--- a/charts/signet-embeddings/values-prod.yaml
+++ b/charts/signet-embeddings/values-prod.yaml
@@ -1,7 +1,7 @@
 model:
   storageUri: hf://intfloat/e5-mistral-7b-instruct
 predictor:
-  runtimeClassName: nvidia
+  runtimeClassName: nvidia-cdi
   deploymentStrategy:
     type: RollingUpdate
     rollingUpdate:
