--- a/charts/signet-llm/values-prod.yaml
+++ b/charts/signet-llm/values-prod.yaml
@@ -7,3 +7,8 @@ predictor:
     rollingUpdate:
       maxSurge: 0
       maxUnavailable: 1
+runtime:
+  container:
+    env:
+      - name: LD_LIBRARY_PATH
+        value: "/usr/local/nvidia/lib64:/usr/local/nvidia/lib:$(LD_LIBRARY_PATH)"
