--- a/charts/signet-embeddings/values-prod.yaml
+++ b/charts/signet-embeddings/values-prod.yaml
@@ -1,5 +1,8 @@
 model:
   storageUri: hf://intfloat/e5-mistral-7b-instruct
+  env:
+    - name: LD_LIBRARY_PATH
+      value: "/usr/local/nvidia/lib64:/usr/local/nvidia/lib:$(LD_LIBRARY_PATH)"
 predictor:
   runtimeClassName: nvidia-cdi
   deploymentStrategy:
