--- a/charts/signet-llm/values-prod.yaml
+++ b/charts/signet-llm/values-prod.yaml
@@ -1,5 +1,8 @@
 model:
   storageUri: hf://Qwen/Qwen2.5-14B-Instruct
+  env:
+    - name: LD_LIBRARY_PATH
+      value: "/usr/local/nvidia/lib64:/usr/local/nvidia/lib:$(LD_LIBRARY_PATH)"
 predictor:
   runtimeClassName: nvidia-cdi
   deploymentStrategy:
