--- a/charts/signet-embeddings/values-prod.yaml
+++ b/charts/signet-embeddings/values-prod.yaml
@@ -2,7 +2,7 @@ model:
   storageUri: hf://intfloat/e5-mistral-7b-instruct
   env:
     - name: LD_LIBRARY_PATH
-      value: "/usr/local/nvidia/lib64:/usr/local/nvidia/lib:$(LD_LIBRARY_PATH)"
+      value: "/usr/lib64:/usr/local/nvidia/lib64:/usr/local/nvidia/lib"
     - name: NVIDIA_VISIBLE_DEVICES
       value: "all"
 predictor:
